Add ability statuses and log as DTO